refactor test and change to account number
